--- a/KeywordIdentification_code.ipynb
+++ b/KeywordIdentification_code.ipynb
@@ -1,4 +1,4 @@
-{
+﻿{
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
@@ -760,7 +760,7 @@
         "id": "S8wobs-3yJme"
       },
       "source": [
-        "**Para ejemplificar el funcionamiento del etiquetador creado, se muestra un ejemplo de funcionamiento de la clase *Viterbi* para etiquetar la oración \"El caminante vino con el vino tinto\", en la que aparece la palabra ambigua \"vino\". Es importante comprobar que se consiguen diferenciar correctamente ambas acepciones de la palabra en cuestión, pues al fin y al cabo se utilizará esta clase para la desambiguación de los sentidos de las palabras**"
+        "**Para ejemplificar el funcionamiento del etiquetador creado, se muestra un ejemplo de funcionamiento de la clase *Viterbi* para etiquetar la oración \"El invitado vino con el vino tinto de la cosecha de 1996\", en la que aparece la palabra ambigua \"vino\". Es importante comprobar que se consiguen diferenciar correctamente ambas acepciones de la palabra en cuestión, pues al fin y al cabo se utilizará esta clase para la desambiguación de los sentidos de las palabras**"
       ]
     },
     {
